# Python-Project-1

./: .gitignore  pyproject.toml
file_analyzer/: NOTEXSISTEDPATH  decorators.py  filters.py  main.py  pyproject.toml  report.py  scanner.py  utils.py
