[project]
name = "python-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Bob",email = "r_yu_00@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)"
]
