[project]
name = "file_analyzer"
version = "0.1.0"
description = "CLI tool for analyzing files"
authors = [
    {name = "Rythys", email = "r_yu_00@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
file-analyzer = "file_analyzer.main:main"

[tool.poetry]
# Если папка file_analyzer лежит в корне, это можно даже удалить
packages = [{ include = "file_analyzer" }]

[tool.ruff]
# Добавьте это, чтобы Ruff автоматически сортировал импорты по PEP 8
lint.select = ["I", "E", "F"] 
lint.fixable = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.9.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


